Add Google site verification meta tagjust update
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>R7 Hub • Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta name="google-site-verification" content="2fbSrOCSLApQx-Xlxp5dlC9ltICjOQm-LAWbhybDvHY" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -229,3 +229,4 @@
     </script>
   </body>
 </html>
+
