Update index.html with SEO meta tags
Added meta tags for SEO and updated title.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>R7 Hub • Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="google-site-verification" content="2fbSrOCSLApQx-Xlxp5dlC9ltICjOQm-LAWbhybDvHY" />
+    <title>Free Hashtag Generator | Instagram Trending Hashtags Tool</title>
+<meta name="description" content="Free Hashtag Generator — Instagram, YouTube, Reels, TikTok ke liye trending hashtags instant copy karo. Smart hashtag tool for fast growth. No ads, no login.">
+<meta name="keywords" content="hashtag generator, instagram hashtags, trending hashtags, reels hashtags, YouTube hashtags, free hashtag tool, hashtag copy tool">
+<meta property="og:title" content="Free Hashtag Generator – Trending Hashtags">
+<meta property="og:description" content="Instantly generate trending hashtags for Instagram & Reels. Free, fast, and clean tool.">
+<meta property="og:url" content="https://hashtagss.netlify.app">
+<meta property="og:type" content="website">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -229,4 +237,5 @@
     </script>
   </body>
 </html>
+
 
