Enhance SEO with canonical link and structure
Added canonical link for SEO and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <meta property="og:description" content="Instantly generate trending hashtags for Instagram & Reels. Free, fast, and clean tool.">
 <meta property="og:url" content="https://hashtagss.netlify.app">
 <meta property="og:type" content="website">
+    <link rel="canonical" href="https://hashtagss.netlify.app/">
+
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -237,5 +239,6 @@
     </script>
   </body>
 </html>
+
 
 
