Refactor index.html for SEO and structure
Updated HTML structure and improved SEO meta tags.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>R7 Hub • Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="google-site-verification" content="2fbSrOCSLApQx-Xlxp5dlC9ltICjOQm-LAWbhybDvHY" />
-    <title>Free Hashtag Generator | Instagram Trending Hashtags Tool</title>
-<meta name="description" content="Free Hashtag Generator — Instagram, YouTube, Reels, TikTok ke liye trending hashtags instant copy karo. Smart hashtag tool for fast growth. No ads, no login.">
-<meta name="keywords" content="hashtag generator, instagram hashtags, trending hashtags, reels hashtags, YouTube hashtags, free hashtag tool, hashtag copy tool">
-<meta property="og:title" content="Free Hashtag Generator – Trending Hashtags">
-<meta property="og:description" content="Instantly generate trending hashtags for Instagram & Reels. Free, fast, and clean tool.">
-<meta property="og:url" content="https://hashtagss.netlify.app">
-<meta property="og:type" content="website">
-    <link rel="canonical" href="https://hashtagss.netlify.app/">
+ <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
+  <!-- SEO Meta Tags -->
+  <title>Free Hashtag Generator | Instagram Trending Hashtags Tool</title>
+  <meta name="description" content="Free Hashtag Generator – Instagram, YouTube, Reels, TikTok ke liye trending hashtags instant copy karo. Smart hashtag tool for fast growth. No ads, no login." />
+  <meta name="keywords" content="hashtag generator, instagram hashtags, trending hashtags, reels hashtags, YouTube hashtags, free hashtag tool, hashtag copy tool" />
+
+  <!-- Open Graph (for share preview) -->
+  <meta property="og:title" content="Free Hashtag Generator – Trending Hashtags" />
+  <meta property="og:description" content="Instantly generate trending hashtags for Instagram & Reels. Free, fast, and clean tool." />
+  <meta property="og:url" content="https://hashtagss.netlify.app/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/" />
+
+  <!-- Styles / Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -29,6 +35,7 @@
       };
     </script>
   </head>
+
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR -->
     <header class="border-b border-slate-800 bg-r7dark/80 backdrop-blur sticky top-0 z-40">
@@ -239,6 +246,7 @@
     </script>
   </body>
 </html>
+
 
 
 
