--- a/home.html
+++ b/home.html
@@ -1,46 +1,56 @@
 
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>R7 Hub • Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- Google Verification -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Verification -->
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
-  <!-- SEO Meta Tags -->
-  <title>Free Hashtag Generator | Instagram Trending Hashtags Tool</title>
-  <meta name="description" content="Free Hashtag Generator – Instagram, YouTube, Reels, TikTok ke liye trending hashtags instant copy karo. Smart hashtag tool for fast growth. No ads, no login." />
-  <meta name="keywords" content="hashtag generator, instagram hashtags, trending hashtags, reels hashtags, YouTube hashtags, free hashtag tool, hashtag copy tool" />
+  <!-- MAIN TITLE -->
+  <title>Free Hashtag Generator for Instagram Reels | R7 Hub – Ramzan Ahmad</title>
 
-  <!-- Open Graph (for share preview) -->
-  <meta property="og:title" content="Free Hashtag Generator – Trending Hashtags" />
-  <meta property="og:description" content="Instantly generate trending hashtags for Instagram & Reels. Free, fast, and clean tool." />
-  <meta property="og:url" content="https://hashtagss.netlify.app/" />
-  <meta property="og:type" content="website" />
+  <!-- MAIN SEO -->
+  <meta name="description" content="Free hashtag generator by R7 Hub (Ramzan Ahmad) – trending hashtags for Instagram Reels, posts, YouTube Shorts & TikTok. Best tool for Indian creators. No ads, no login.">
+  <meta name="keywords" content="free hashtag generator, instagram hashtags, trending hashtags, reels hashtags, india hashtags, R7 Hub, Ramzan Ahmad, hashtag tool">
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH (Social Media Preview) -->
+  <meta property="og:title" content="Free Hashtag Generator – R7 Hub">
+  <meta property="og:description" content="Instantly copy trending hashtags for Instagram & Reels. Free, fast, clean tool made by Ramzan Ahmad.">
+  <meta property="og:image" content="https://ramzan0043.github.io/hashtags/ramzan_ahmad.jpeg">
+  <meta property="og:url" content="https://ramzan0043.github.io/hashtags/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TheR7 Hub" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Free Hashtag Generator – R7 Hub">
+  <meta name="twitter:description" content="Trending Instagram & Reels hashtags for Indian creators.">
+  <meta name="twitter:image" content="https://ramzan0043.github.io/hashtags/ramzan_ahmad.jpeg">
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://ramzan0043.github.io/hashtags/" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+
+</head>
   <body class="bg-r7dark text-slate-100">
    
     <!-- NAVBAR (COMMON) -->
@@ -271,3 +281,4 @@
 
   </body>
 </html>
+
