--- a/blog.html
+++ b/blog.html
@@ -20,60 +20,77 @@
     </script>
   </head>
   <body class="bg-r7dark text-slate-100">
-    <!-- NAVBAR (same as index) -->
-    <header class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur">
-      <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-        <div class="flex items-center gap-3">
-          <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
-            R7
-          </div>
-          <div>
-            <p class="text-sm font-semibold tracking-tight">R7 Blog</p>
-            <p class="text-[11px] text-slate-400">Code • Growth • Life</p>
-          </div>
-        </div>
+   
+    <!-- NAVBAR (COMMON) -->
+<header class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur">
+  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
+   
+       <!-- Left: Logo + text -->
+<a href="https://instagram.com/ramzan0043" target="_blank" 
+   class="flex items-center gap-3">
 
-        <nav class="hidden md:flex items-center gap-5 text-sm">
-          <a href="index.html" class="hover:text-ramzan transition">Home</a>
-          <a href="blog.html" class="text-ramzan">Blog</a>
-          <a href="hashtags.html" class="hover:text-ramzan transition">Hashtag Box</a>
-          <a href="about.html" class="hover:text-ramzan transition">About</a>
-        </nav>
+  <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
+    R7
+  </div>
 
-        <!-- Mobile menu button -->
-        <button
-          id="menuToggle"
-          class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
-          aria-label="Menu"
-        >
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none"
-               viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-      </div>
+  <div>
+    <p class="text-sm font-semibold tracking-tight">Hashtags</p>
+  </div>
 
-      <!-- Mobile nav dropdown -->
-      <div
-        id="mobileMenu"
-        class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
-      >
-        <div class="flex flex-col gap-2">
-          <button
-            type="button"
-            onclick="history.back()"
-            class="inline-flex items-center gap-1 rounded-lg border border-slate-700 bg-slate-900/80 px-3 py-1.5 text-[11px] text-slate-200"
-          >
-            ⬅ Back
-          </button>
-          <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
-          <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
-          <a href="hashtags.html" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
-          <a href="about.html" class="py-1 text-slate-200">👤 About</a>
-        </div>
-      </div>
-    </header>
+</a>
+
+    
+    <!-- Desktop nav -->
+<nav class="hidden md:flex items-center gap-4 text-[13px]">
+  <a href="index.html" class="hover:text-ramzan transition">Home</a>
+  <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
+  <a href="index.html#all" class="hover:text-ramzan transition">Hashtag Box</a>
+  <a href="about.html" class="hover:text-ramzan transition">About</a>
+  <a href="contact.html" class="hover:text-ramzan transition">Contact</a>
+  <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
+  <a href="privacy.html" class="hover:text-ramzan transition">Privacy</a>
+  <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
+  <a href="disclaimer.html" class="hover:text-ramzan transition">Disclaimer</a>
+  <a href="sitemap.html" class="hover:text-ramzan transition">Sitemap</a>
+</nav>
+
+
+    <!-- Mobile menu button -->
+    <button
+      id="menuToggle"
+      class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
+      aria-label="Menu"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none"
+          viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+  </div>
+
+  <!-- Mobile nav dropdown -->
+  <div
+    id="mobileMenu"
+    class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
+  >
+    <div class="flex flex-col gap-2">
+      <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
+      <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
+      <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
+      <a href="about.html" class="py-1 text-slate-200">👤 About</a>
+      <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+
+      <div class="h-px bg-slate-800 my-1"></div>
+      <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
+      <a href="privacy.html" class="py-1 text-slate-300">🛡 Privacy Policy</a>
+      <a href="terms.html" class="py-1 text-slate-300">📜 Terms & Conditions</a>
+      <a href="disclaimer.html" class="py-1 text-slate-300">⚠ Disclaimer</a>
+      <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
+    </div>
+  </div>
+</header>
+
 
     <!-- HERO -->
     <section class="border-b border-slate-800 bg-gradient-to-b from-slate-900 via-slate-950 to-r7dark">
@@ -211,27 +228,37 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="border-t border-slate-800 py-4">
-      <div class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2">
-        <p>© <span id="year"></span> R7 Blog • Static demo.</p>
-        <p>
-          <a href="index.html" class="text-ramzan">← Home</a> •
-          <a href="hashtags.html" class="text-ramzan">Hashtag Box</a> •
-          <a href="about.html" class="text-ramzan">About</a>
-        </p>
-      </div>
-    </footer>
+   <footer class="border-t border-slate-800 py-4 mt-6">
+  <div class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2">
+    <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
+    <p class="space-x-2">
+      <a href="index.html" class="text-ramzan">Home</a> •
+      <a href="blog.html" class="text-ramzan">Blog</a> •
+      <a href="about.html" class="text-ramzan">About</a> •
+      <a href="privacy.html" class="text-ramzan">Privacy</a> •
+      <a href="terms.html" class="text-ramzan">Terms</a> •
+      <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
+      <a href="sitemap.html" class="text-ramzan">Sitemap</a>
+    </p>
+  </div>
+</footer>
 
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
+<script>
+  // Mobile menu toggle (COMMON)
+  const menuToggle = document.getElementById("menuToggle");
+  const mobileMenu = document.getElementById("mobileMenu");
+  if (menuToggle && mobileMenu) {
+    menuToggle.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+  }
 
-      const menuToggle = document.getElementById("menuToggle");
-      const mobileMenu = document.getElementById("mobileMenu");
-      if (menuToggle && mobileMenu) {
-        menuToggle.addEventListener("click", () => {
-          mobileMenu.classList.toggle("hidden");
-        });
-      }
-    </script>
+  // Year (agar span id="year" use kar rahe ho to)
+  const yearSpan = document.getElementById("year");
+  if (yearSpan) {
+    yearSpan.textContent = new Date().getFullYear();
+  }
+</script>
+
   </body>
 </html>
