--- a/disclaimer.html
+++ b/disclaimer.html
@@ -25,16 +25,20 @@
     <!-- NAVBAR (COMMON) -->
 <header class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur">
   <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-    <!-- Left: Logo + text -->
-    <div class="flex items-center gap-3">
-      <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
-        R7
-      </div>
-      <div>
-        <p class="text-sm font-semibold tracking-tight">Hashtags</p>
-      
-      </div>
-    </div>
+      <!-- Left: Logo + text -->
+<a href="https://instagram.com/ramzan0043" target="_blank" 
+   class="flex items-center gap-3">
+
+  <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
+    R7
+  </div>
+
+  <div>
+    <p class="text-sm font-semibold tracking-tight">Hashtags</p>
+  </div>
+
+</a>
+
 
     <!-- Desktop nav -->
 <nav class="hidden md:flex items-center gap-4 text-[13px]">
