--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
 <nav class="hidden md:flex items-center gap-4 text-[13px]">
   <a href="index.html" class="hover:text-ramzan transition">Home</a>
   <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
-  <a href="index.html#all" class="hover:text-ramzan transition">Hashtag Box</a>
+  <a href="index.html#all" class="hover:text-ramzan transition">Hashtags</a>
   <a href="about.html" class="hover:text-ramzan transition">About</a>
   <a href="contact.html" class="hover:text-ramzan transition">Contact</a>
   <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
@@ -105,7 +105,7 @@
     <div class="flex flex-col gap-2">
       <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
       <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
-      <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
+      <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtags</a>
       <a href="about.html" class="py-1 text-slate-200">👤 About</a>
       <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
 
@@ -282,5 +282,6 @@
 
   </body>
 </html>
+
 
 
