--- a/home.html
+++ b/home.html
@@ -10,6 +10,9 @@
 
 <!-- MAIN TITLE -->
 <title>Free Hashtag Generator for Instagram Reels | R7 Hub – Ramzan Ahmad</title>
+ <title> Best Free Hashtag Generator for Instagram Reels India | Trending Viral Tags for Posts & Shorts | R7 Hub • Hashtag Ramzan Official </title>
+
+  
 
 <!-- MAIN SEO -->
 <meta name="description" content="Free hashtag generator by R7 Hub (Ramzan Ahmad) – trending hashtags for Instagram Reels, posts, YouTube Shorts & TikTok. Best tool for Indian creators. No ads, no login.">
@@ -282,6 +285,7 @@
 
   </body>
 </html>
+
 
 
 
