--- a/home.html
+++ b/home.html
@@ -9,10 +9,7 @@
 <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
 <!-- MAIN TITLE -->
-<title>Free Hashtag Generator for Instagram Reels | R7 Hub – Ramzan Ahmad</title>
- <title> Best Free Hashtag Generator for Instagram Reels India | Trending Viral Tags for Posts & Shorts | R7 Hub • Hashtag Ramzan Official </title>
-
-  
+<title>Free Instagram Hashtags Generator India | Trending Reels Tags, Viral Posts Hashtags | R7 Hub • Hashtag Ramzan Tool</title>
 
 <!-- MAIN SEO -->
 <meta name="description" content="Free hashtag generator by R7 Hub (Ramzan Ahmad) – trending hashtags for Instagram Reels, posts, YouTube Shorts & TikTok. Best tool for Indian creators. No ads, no login.">
@@ -285,6 +282,7 @@
 
   </body>
 </html>
+
 
 
 
