--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>About • TheR7 Hub – Ramzan Ahmad</title>
+    <title>About R7 Hub • Hashtag Ramzan | Best Free Hashtag Generator for Instagram India
+</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -406,3 +408,4 @@
     </script>
   </body>
 </html>
+
