Update blog title and improve layout
Signed-off-by: ramzan0043 <ramzaan0043@gmail.com>

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>R7 Blog • Ramzan</title>
+    <title>R7 Hub Blog | Trending Instagram Reels Hashtags, Creator Tips & Viral Growth Tricks
+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -262,3 +263,4 @@
 
   </body>
 </html>
+
