Update title in contact.html for clarity
Signed-off-by: ramzan0043 <ramzaan0043@gmail.com>

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Contact • R7 Hub – Ramzan</title>
+    <title>Contact R7 Hub • Hashtag Ramzan | Instagram Hashtag Tool Support India
+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
