--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FAQ • R7 Hub – Questions & Answers</title>
+    <title>FAQ • R7 Hub | Instagram Hashtag Generator Questions & Answers
+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -201,3 +202,4 @@
 
   </body>
 </html>
+
