--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Terms & Conditions • R7 Hub – Ramzan</title>
+    <title>Terms & Conditions • R7 Hub | Free Instagram Hashtag Generator India
+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -215,3 +216,4 @@
 
   </body>
 </html>
+
