Revise disclaimer page title and content
Updated the title and added additional content to the disclaimer page.

Signed-off-by: ramzan0043 <ramzaan0043@gmail.com>

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Disclaimer • R7 Hub – Ramzan</title>
+    <title>Disclaimer • R7 Hub | Hashtag Ramzan – Free Hashtag Generator
+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -204,3 +205,4 @@
 
   </body>
 </html>
+
