--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Ramzan Hashtags • BIG Version</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Ready-made trending hashtags for Instagram, Facebook, YouTube, Snapchat & Twitter/X – Reels, posts, stories, shorts & more. Search, filter & copy in one click."
-    />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+
+  <!-- MAIN TITLE -->
+  <title>Free Instagram Hashtags Generator India | Trending Reels Tags, Viral Posts Hashtags | R7 Hub • Hashtag Ramzan Tool</title>
+
+  <!-- MAIN SEO -->
+  <meta name="description" content="Use the free Instagram Hashtags Generator by R7 Hub • Hashtag Ramzan to get trending Indian hashtags for reels, posts, stories, YouTube Shorts and TikTok. Instantly copy-paste viral tags, boost reach, views and followers, and grow faster as a creator. No ads, no login, 100% free hashtag tool for Indian creators.">
+  <meta name="keywords" content="free hashtag generator, instagram hashtags, instagram reels tags, trending hashtags, viral hashtags india, reels hashtags, indian creators, R7 Hub, Hashtag Ramzan, Ramzan Ahmad, hashtag tool" />
+  <meta name="author" content="Ramzan Ahmad" />
+
+  <!-- OPEN GRAPH (Social Media Preview) -->
+  <meta property="og:title" content="Free Instagram Hashtags Generator India | R7 Hub • Hashtag Ramzan" />
+  <meta property="og:description" content="Instantly copy trending hashtags for Instagram reels, posts and shorts. Free, fast, clean hashtag tool made by Ramzan Ahmad for Indian creators." />
+  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Free Instagram Hashtags Generator India | R7 Hub • Hashtag Ramzan" />
+  <meta name="twitter:description" content="Trending Instagram and reels hashtags for Indian creators. Free, no login hashtag tool." />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
 
   <body class="bg-r7dark text-slate-100">
     <!-- ================= NAVBAR ================= -->
@@ -2111,3 +2135,4 @@
     </script>
   </body>
 </html>
+
